--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
+    "cookieparser": "^0.1.0",
     "core-js": "^3.6.5",
     "firebase": "^8.0.0",
+    "js-cookie": "^2.2.1",
+    "jwt-decode": "^3.0.0",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
