--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.0.0",
     "js-cookie": "^2.2.1",
+    "js.cookie": "^0.0.4",
     "jwt-decode": "^3.0.0",
     "nuxt": "^2.14.6"
   },
